--- a/zed/settings.json
+++ b/zed/settings.json
@@ -55,5 +55,27 @@
 		"JSON": { "formatter": { "language_server": { "name": "biome" } } },
 		"JSONC": { "formatter": { "language_server": { "name": "biome" } } },
 		"CSS": { "formatter": { "language_server": { "name": "biome" } } }
-	}
+	},
+	"scrollbar": {
+		"axes": {
+			"horizontal": false,
+			"vertical": false
+		}
+	},
+	"toolbar": {
+		"breadcrumbs": false,
+		"agent_review": false,
+		"code_actions": false,
+		"quick_actions": false,
+		"selections_menu": false
+	},
+	"title_bar": {
+		"show_sign_in": false,
+		"show_onboarding_banner": false
+	},
+	"cursor_shape": "underline",
+	"jsx_tag_auto_close": {
+		"enabled": true
+	},
+	"soft_wrap": "editor_width"
 }
