--- a/zed/settings.json
+++ b/zed/settings.json
@@ -24,6 +24,10 @@
 	// 		"function": false
 	// 	}
 	// },
+	"git_panel": {
+  "dock": "left"
+ },
+ "vim_mode": false,
 	"icon_theme": {
 		"mode": "system",
 		"light": "Zed (Default)",
@@ -45,7 +49,8 @@
 		"show_nav_history_buttons": false
 	},
 	"project_panel": {
-		"auto_fold_dirs": false
+		"dock": "left",
+  "auto_fold_dirs": false
 	},
 
 	"languages": {
@@ -77,5 +82,57 @@
 	"jsx_tag_auto_close": {
 		"enabled": true
 	},
-	"soft_wrap": "editor_width"
+	"soft_wrap": "editor_width",
+	"lsp": {
+		"discord_presence": {
+			"initialization_options": {
+				// Application ID for the rich presence (don't touch it unless you know what you're doing)
+				"application_id": "1263505205522337886",
+				// Base URL for all language icons
+				"base_icons_url": "https://raw.githubusercontent.com/xhyrom/zed-discord-presence/main/assets/icons/",
+
+				"state": "Working on {filename}",
+				"details": "In {workspace}",
+				// URL for the large image
+				"large_image": "{base_icons_url}/{language:lo}.png", // :lo lowercase the language name
+				"large_text": "{language:u}", // :u capitalizes the first letter
+				// URL for the small image
+				"small_image": "{base_icons_url}/zed.png",
+				"small_text": "Zed",
+
+				// Idle settings - when you're inactive
+				"idle": {
+					"timeout": 300, // Idle timeout in seconds (300 seconds = 5 minutes)
+
+					// Action to take when idle
+					// `change_activity` - changes the activity to idle with the following details
+					// `clear_activity` - clears the activity (hides it)
+					"action": "change_activity",
+
+					"state": "Idling",
+					"details": "In Zed",
+					"large_image": "{base_icons_url}/zed.png",
+					"large_text": "Zed",
+					"small_image": "{base_icons_url}/idle.png",
+					"small_text": "Idle"
+				},
+
+				// Rules to disable presence in specific workspaces
+				"rules": {
+					"mode": "blacklist", // Can also be "whitelist"
+					"paths": ["absolute path"]
+				},
+
+				"git_integration": true,
+
+				// Per-language overrides
+				"languages": {
+					"rust": {
+						"state": "Hacking on {filename}",
+						"details": "Rustacean at work"
+					}
+				}
+			}
+		}
+	}
 }
