chore(zed): change theme to Oscura

--- a/zed/settings.json
+++ b/zed/settings.json
@@ -43,7 +43,7 @@
 	"theme": {
 		"mode": "system",
 		"light": "One Dark",
-		"dark": "Monolith Dark"
+		"dark": "Oscura"
 	},
 	"tab_bar": {
 		"show_nav_history_buttons": false
