--- a/zed/settings.json
+++ b/zed/settings.json
@@ -7,50 +7,42 @@
 // custom settings, run `zed: open default settings` from the
 // command palette (cmd-shift-p / ctrl-shift-p)
 {
-	// "inlay_hints": {
-	// 	"enabled": true,
-	// 	"show_value_hints": true,
-	// 	"show_type_hints": true,
-	// 	"show_parameter_hints": true,
-	// 	"show_other_hints": true,
-	// 	"show_background": false,
-	// 	"edit_debounce_ms": 700,
-	// 	"scroll_debounce_ms": 50,
-	// 	"toggle_on_modifiers_press": {
-	// 		"control": false,
-	// 		"alt": false,
-	// 		"shift": false,
-	// 		"platform": false,
-	// 		"function": false
-	// 	}
-	// },
-	"git_panel": {
-  "dock": "left"
- },
- "vim_mode": false,
+	"theme": "VSCode Dark Modern",
+ "git_panel": {
+		"dock": "left"
+	},
+	"vim_mode": false,
 	"icon_theme": {
 		"mode": "system",
 		"light": "Zed (Default)",
 		"dark": "Material Icon Theme"
 	},
 	"ui_font_size": 16,
-	"buffer_font_size": 15,
+	"buffer_font_size": 14,
+	"current_line_highlight": "none",
 	"ui_font_family": "JetBrainsMono Nerd Font",
 	"buffer_font_family": "JetBrainsMono Nerd Font Mono",
 	"terminal": {
-		"font_family": "JetBrainsMono Nerd Font Mono"
-	},
-	"theme": {
-		"mode": "system",
-		"light": "One Dark",
-		"dark": "Oscura"
+		"font_family": "JetBrainsMono Nerd Font Mono",
+		"cursor_shape": "underline",
+		"font_size": 18
 	},
 	"tab_bar": {
 		"show_nav_history_buttons": false
 	},
+	"indent_guides": {
+	"enabled": false
+	},
 	"project_panel": {
 		"dock": "left",
-  "auto_fold_dirs": false
+		"auto_fold_dirs": false,
+		"sticky_scroll": false,
+		"indent_guides": {
+		"show": "never"
+		},
+		"scrollbar": {
+		"show": "never"
+		}
 	},
 
 	"languages": {
